example/tests/snapshots/comprehensive_snapshots__lambda_calculus__abstraction.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(r\"\\x.x\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                ".",
            ),
            start: 2,
            end: 2,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 3,
            end: 3,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 4,
            end: 4,
        },
    ],
)
