example/tests/snapshots/comprehensive_snapshots__lambda_calculus__error_incomplete_lambda.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(r\"\\\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
    ],
)
