example/tests/snapshots/comprehensive_snapshots__lambda_calculus__nested_abstraction.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(r\"\\x.\\y.x\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                ".",
            ),
            start: 2,
            end: 2,
        },
        ParseError {
            reason: UnexpectedToken(
                "\\",
            ),
            start: 3,
            end: 3,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 4,
            end: 4,
        },
        ParseError {
            reason: UnexpectedToken(
                ".",
            ),
            start: 5,
            end: 5,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 6,
            end: 6,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 7,
            end: 7,
        },
    ],
)
