example/tests/snapshots/comprehensive_snapshots__lambda_calculus__variable.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"x\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 1,
            end: 1,
        },
    ],
)
